# notifications

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  PLAN-AI.md  PLAN-DESIGN.md  PLAN-HUMAN.md  PLAN.md  README.md  gen-tauri-design.ps1  index.html  package-lock.json  package.json  path  task-demo-v3.html  vite.config.js  项目说明-人类草稿.md
.claude/: settings.json
.playwright-mcp/: page-2026-06-05T16-17-41-218Z.yml  page-2026-06-05T16-18-23-598Z.yml  page-2026-06-05T16-24-05-043Z.yml  page-2026-06-05T16-26-25-664Z.yml  page-2026-06-05T16-30-19-565Z.yml  page-2026-06-05T16-34-39-765Z.yml  page-2026-06-05T16-35-28-572Z.yml  page-2026-06-05T16-37-03-873Z.yml  page-2026-06-05T16-37-45-345Z.yml  page-2026-06-05T16-38-38-303Z.yml  page-2026-06-05T16-52-42-183Z.yml  page-2026-06-05T16-53-04-175Z.yml  page-2026-06-05T16-53-07-306Z.yml  page-2026-06-05T16-53-12-987Z.yml  page-2026-06-05T16-54-08-281Z.yml  page-2026-06-05T16-54-26-410Z.yml  page-2026-06-05T16-54-41-095Z.yml  page-2026-06-05T16-56-30-994Z.yml  page-2026-06-05T16-57-56-935Z.yml  page-2026-06-05T16-59-14-449Z.yml
design/: mermaid.md
dev_tools/: README.md  create-test-mission.cjs  create-test-notification.cjs  patch-pdfjs.cjs
doc/: Bmob API 使用说明.md  limitations.md  mermaid-usage.md  oversight.md  腾讯云 COS 说明.md
e2e/: helpers.js  inspect.mjs  mission-debug.spec.js  mission-graph.spec.js  (+4 more)
mcp-servers/write-file/: README.md  pyproject.toml  server.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  notify.rs  sync.rs  tray.rs
(+124 files in other folders)
