[project]
name = "mcp-write-file"
version = "0.1.0"
description = "文件写入 MCP Server — 提供 write_file / append_file 工具"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
write-file-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
